<resources>
    <string name="app_name">MyCalculator</string>
    <string name="equalText">=</string>
    <string name="plusText">+</string>
    <string name="clrText">CLR</string>
    <string name="zeroText">0</string>
    <string name="periodText">.</string>
    <string name="minusText">-</string>
    <string name="threeText">3</string>
    <string name="twoText">2</string>
    <string name="oneText">1</string>
    <string name="multText">*</string>
    <string name="sixText">6</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="divText">/</string>
    <string name="eightText">8</string>
    <string name="sevenText">7</string>
    <string name="nineText">9</string>
</resources>