<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="NestedWeights"
    >

    <!-- the orientation of the app should be vertical -->

<!--    text view for output, max length is the number of fields
 the text should have (12 only)-->
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bgColor"
        android:maxLength="12"
        android:padding="10dp"
        android:gravity="end|bottom"
        android:textSize="48sp"
        tools:text="12345678" />


<!--    Here we have 4 linear layouts with each having 4 buttons-->

<!--    first linear layout with the buttons row 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
<!--   horizontal orientation for buttons -->
<!--    can also use android.widget.Button-->
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sevenText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eightText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nineText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"
            />
        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divText"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"
            />
    </LinearLayout>

    <!--- second linear layout with the buttons, 2nd row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <!-- horizontal orientation for buttons -->

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fourText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fiveText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sixText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnTimes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multText"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
    </LinearLayout>

    <!--    3rd linear layout with the buttons 3rd row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <!--        horizontal orientation for buttons -->

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oneText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/twoText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/threeText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minusText"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"
            />
    </LinearLayout>
    <!--    4th linear layout with the buttons 4th row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <!--        horizontal orientation for buttons -->

        <Button
            android:id="@+id/btnPeriod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/periodText"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zeroText"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
<!--        Button on Clear calls the clear method -->
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clrText"
            android:onClick="onClear"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusText"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            style="@style/Theme.MyCalculator"

            />
    </LinearLayout>
<!--    5th row, equal sign -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/equalText"
        android:layout_margin="2dp"
        style="@style/Theme.MyCalculator"
        android:onClick="onEqual"
        />

    </LinearLayout>

</LinearLayout>